--- a/Chat App/index.html
+++ b/Chat App/index.html
@@ -16,7 +16,7 @@
 <body class="bg-dark">
 
     <header class="py-1 px-3 bg-dark text-white">
-        <nav class="navbar border-bottom fixed-top">
+        <nav class="navbar border-bottom">
             <div class="col-md-4 d-flex align-items-center">
                 <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                     <img src="img/chat-app-icon-0.jpg" id="logo" width="40px" height="40px">
