--- a/Chat App/index.html
+++ b/Chat App/index.html
@@ -13,6 +13,8 @@
     </style>
     <script src="https://js.pusher.com/7.0/pusher.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
+
+    
 </head>
 
 <body class="bg-dark">
@@ -51,7 +53,9 @@
                     <div class="text-white d-flex flex-row">
                         <p class="chatP" id="groupNameP">Group Name</p>
                         <p class="chatP">&nbsp : &nbsp Online Users</p>
-                        <p class="chatP">&nbsp(4)</p>
+                        <p class="chatP">&nbsp(</p>
+                        <p class="chatP" id="online">0</p>
+                        <p class="chatP">)</p>
                     </div>
                     <button type="button" class="btn btn-danger" id="logout">Logout</button>
                 </div>
@@ -66,7 +70,8 @@
 
                 <div class="sendDiv text-white text-center">
                     <div class="d-flex flex-row justify-content-between">
-                        <textarea class="form-control m-1" rows="3" placeholder="Enter your message here..." id="msgArea"></textarea>
+                        <textarea class="form-control m-1 text-start" rows="3" placeholder="Enter your message here..."
+                            id="msgArea"></textarea>
                         <button type="button" class="btn btn-success m-1" id="sendMsg">Send Message</button>
                     </div>
                     <p id="timer">You will logout after 60 sec</p>
@@ -76,7 +81,6 @@
     </main>
 
     <script src="script.js"></script>
-
 </body>
 
 </html>
